--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,26 +1,18 @@
 ---
-title: "Manuscript Title"
+title: "492: Predicting the best route for road construction "
 keywords:
   - markdown
   - publishing
   - manubot
 lang: en-US
 authors:
-  - github: johndoe
-    name: John Doe
-    initials: JD
+  - github: kapilrs2
+    name: Kapil Shah
+    initials: KS
     orcid: XXXX-XXXX-XXXX-XXXX
-    twitter: johndoe
-    email: john.doe@something.com
+    twitter: 
+    email: kapilrs2@illinois.edu
     affiliations:
-      - Department of Something, University of Whatever
+      - Civil and Environmental Engineering, University of Illinois Urbana Champaign
     funders:
       - Grant XXXXXXXX
-  - github: janeroe
-    name: Jane Roe
-    initials: JR
-    orcid: XXXX-XXXX-XXXX-XXXX
-    email: jane.roe@whatever.edu
-    affiliations:
-      - Department of Something, University of Whatever
-      - Department of Whatever, University of Something
