slight changes to files

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,26 +1,26 @@
 ---
-title: "Manuscript Title"
+title: "Transportation Project"
 keywords:
   - markdown
   - publishing
   - manubot
 lang: en-US
 authors:
-  - github: johndoe
-    name: John Doe
-    initials: JD
+  - github: thomasNg
+    name: Thomas Ngare
+    initials: TN
     orcid: XXXX-XXXX-XXXX-XXXX
     twitter: johndoe
-    email: john.doe@something.com
+    email: tmatiki2@illinois.edu
     affiliations:
-      - Department of Something, University of Whatever
+      - UIUC
     funders:
       - Grant XXXXXXXX
-  - github: janeroe
-    name: Jane Roe
-    initials: JR
+  - github: thomasNg
+    name: Thomas Ngare
+    initials: TN
     orcid: XXXX-XXXX-XXXX-XXXX
-    email: jane.roe@whatever.edu
+    email: tmatiki2@illinois.edu
     affiliations:
-      - Department of Something, University of Whatever
-      - Department of Whatever, University of Something
+      - UIUC
+      - UIUC
