--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,26 +1,19 @@
 ---
-title: "Manuscript Title"
+title: "Transportation Planning"
 keywords:
   - markdown
   - publishing
   - manubot
 lang: en-US
 authors:
-  - github: johndoe
-    name: John Doe
-    initials: JD
+  - github: Amirthavarshini246
+    name: Amirthavarshini Muraleetharan
+    initials: AM
     orcid: XXXX-XXXX-XXXX-XXXX
-    twitter: johndoe
-    email: john.doe@something.com
+    twitter: NIL
+    email: am86@illinois.edu
     affiliations:
-      - Department of Something, University of Whatever
+      - Department of Civil and Environmental Engineering, University of Illinois, Urbana-Champaign
     funders:
       - Grant XXXXXXXX
-  - github: janeroe
-    name: Jane Roe
-    initials: JR
-    orcid: XXXX-XXXX-XXXX-XXXX
-    email: jane.roe@whatever.edu
-    affiliations:
-      - Department of Something, University of Whatever
-      - Department of Whatever, University of Something
+  
