New Change Made

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -34,7 +34,7 @@ authors:
     funders:
       - Grant XXXXXXXX
   - github: kapilrs2
-    name: Kapil Shah
+    name: Kapil_Shah
     initials: KS
     orcid: XXXX-XXXX-XXXX-XXXX
     email: kapilrs2@illinois.edu
