--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -30,7 +30,7 @@ authors:
     funders:
       - Grant XXXXXXXX
   - github: kapilrs2
-    name: Kapil_Shah
+    name: Kapil Shah
     initials: KS
     orcid: XXXX-XXXX-XXXX-XXXX
     email: kapilrs2@illinois.edu
