--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,6 +1,5 @@
 ---
-title: "CEE492 DS - Data Science for CEE - Fall 2022"
-title: ""
+title: "A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure"
 keywords:
   - markdown
   - publishing
