--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure"
+title: "Predictive Modeling of Effect of Environmental Conditions on Road Construction Projects in USA"
 keywords:
   - markdown
   - publishing
