--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Predictive Modeling of Effect of Environmental Conditions on Road Construction Projects in USA"
+title: "Predictive Modeling of Effect of Weather Conditions on Road Construction Projects in USA"
 keywords:
   - markdown
   - publishing
